--- a/sites/phishing/phishing-login-page.html
+++ b/sites/phishing/phishing-login-page.html
@@ -30,7 +30,7 @@
       <input id="user" name="user" type="text" autocomplete="off" placeholder="you@example.com">
 
       <label for="pass">Password</label>
-      <input id="pass" name="password" type="password" autocomplete="off" placeholder="Enter your password">
+      <input id="pass" name="password" autocomplete="off" placeholder="Enter your password">
 
       <button class="btn" type="submit">Sign in</button>
     </form>
