--- a/sites/phishing/phishing-login-page.html
+++ b/sites/phishing/phishing-login-page.html
@@ -9,8 +9,8 @@
   .card{max-width:360px;margin:28px auto;padding:24px 26px;border-radius:8px;background:#fff;border:1px solid #d5d9d9;box-shadow:0 6px 20px rgba(35,47,62,0.08)}
   h1{font-size:22px;font-weight:400;margin:0 0 10px}
   label{display:block;margin-top:12px;font-weight:700;font-size:14px}
-  input[type="text"], input[type="password"]{width:100%;padding:10px 12px;border-radius:4px;border:1px solid #a6a6a6;margin-top:6px;font-size:14px}
-  input[type="text"]:focus, input[type="password"]:focus{border-color:#ff9900;box-shadow:0 0 3px rgba(255,153,0,0.5);outline:none}
+  input[type="text"], input[id="pass"]{width:100%;padding:10px 12px;border-radius:4px;border:1px solid #a6a6a6;margin-top:6px;font-size:14px}
+  input[type="text"]:focus, input[id="pass"]:focus{border-color:#ff9900;box-shadow:0 0 3px rgba(255,153,0,0.5);outline:none}
   .btn{display:block;width:100%;padding:10px;margin-top:18px;border-radius:8px;background:#ff9900;background:linear-gradient(180deg,#f7dfa5,#f0c14b);color:#111;border:1px solid #a88734;font-weight:700;cursor:pointer}
   .logo{text-align:center;margin-bottom:18px}
   .logo img{width:120px;height:auto}
